--- a/package.json
+++ b/package.json
@@ -56,15 +56,14 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "^2.1.2",
-    "react-dev-utils": "^4.2.1",
     "style-loader": "^0.19.1",
     "stylelint": "^8.2.0",
     "stylelint-config-standard": "^18.2.0",
     "sw-precache-webpack-plugin": "0.11.5",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "3.1.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-manifest-plugin": "^2.0.0-rc.2"
   },
   "dependencies": {
